background issue on mobile patch attempt

--- a/css/style.css
+++ b/css/style.css
@@ -114,7 +114,7 @@ width: 100%;
 img {
 width: 100%;
 max-width: 100%;
-height: auto;
+height: 100%;
 }
 .white-panel {
 position: absolute;
